--- a/styles/main.css
+++ b/styles/main.css
@@ -42,10 +42,13 @@ body {
     padding: 0.25rem;
     margin: 0 0.25rem;
     color: #222;
+}
+
+#picker button i {
     opacity: 0.6;
 }
 
-#picker button:disabled {
+#picker button:disabled i {
     opacity: 0.2;
 }
 
@@ -98,12 +101,12 @@ body {
 }
 
 .sidebar {
-    flex-basis: 11rem;
+    flex-basis: 12rem;
     flex-shrink: 0;
     border-left: 1px solid #DDD;
     padding: 0;
     margin: 0;
-    overflow: scroll;
+    overflow: visible;
     display: flex;
     flex-direction: column;
 }
@@ -359,6 +362,7 @@ button.stealth {
     background-size: 16px auto;
     vertical-align: middle;
     flex-shrink: 0;
+    font-style: normal;
 }
 
 .icon.icon-hidden       { background-position: 0px -0px; }
