--- a/styles/main.css
+++ b/styles/main.css
@@ -101,7 +101,7 @@ body {
 }
 
 .sidebar {
-    flex-basis: 12rem;
+    max-width: 12rem;
     flex-shrink: 0;
     border-left: 1px solid #DDD;
     padding: 0;
